bootstrap file added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- custom style  -->
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-    
+    <!-- header and main section wrapper -->
+    <div id="main__sec__wrapper">
+        <!-- border-top  -->
+        <div id="border__top"></div>
+        <!-- header section  -->
+        <header>
+            <!-- navbar  -->
+            <div class="container">
+                <!-- left brand  -->
+                <a href="" class="brand d-flex justify-content-between">
+                    <div class="img__wrap">
+                        <img src="./img/brand-logo.svg" alt="">
+                    </div>
+                    <div class="texts">
+                        <p>Smarter</p>
+                        <p>Safet IT</p>
+                    </div>
+                </a>
+                <!-- menu icon  -->
+                <div class="menu"></div>
+            </div>
+        </header>
+    </div>
 
 
-    
+    <!-- js file  -->
 </body>
 </html>
