add bottom padding on main section container

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </header>
         <!-- main section  ------------------------->
         <main>
-            <div class="container" id="mainContainer">
+            <div class="container pb-lg-3 pb-xl-4 pb-xxl-5" id="mainContainer">
                     <!-- heading and forms  -->
                     <aside class="heading_form pb-sm-5 pb-lg-0">
                         <h6 class="smb s_head_ti">for smb's since 1998</h6>
