--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- header and main section wrapper -->
-    <div id="main__sec__wrapper">
+    <div id="main__sec__wrapper" class="pb-xxl-5">
         <!-- border-top  -->
         <div id="border__top"></div>
         <!-- header section  ------------------------->
@@ -63,7 +63,7 @@
         </header>
         <!-- main section  ------------------------->
         <main>
-            <div class="container pb-lg-3 pb-xl-4 pb-xxl-5" id="mainContainer">
+            <div class="container pb-3 pb-xl-4 pb-xxl-5" id="mainContainer">
                     <!-- heading and forms  -->
                     <aside class="heading_form pb-sm-5 pb-lg-0">
                         <h6 class="smb s_head_ti">for smb's since 1998</h6>
@@ -168,7 +168,65 @@
             </div>
         </main>
     </div>
-
+    <!-- mini attacks  -->
+    <section id="miniAttacks">
+        <div class="container py-5">
+            <!-- main heading  -->
+            <aside class="main_heading">
+                <h6 class="smb s_head_ti">for smb's since 1998</h6>
+                <h2 class="section_heading mb-0 bold text-dark text-capitalize text-left s_h_l">minimize attacks</h2>
+                <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
+                    <span>Increase resiliency,</span>
+                    <span>become IT anti-fragile</span>
+                </h4>
+            </aside>
+            <!-- first list container  -->
+            <aside class="cus_card_container first_card_list mt-3 d-sm-flex justify-content-sm-between">
+                <!-- cards  -->
+                <div class="cus_card bg-white w-sm-31">
+                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
+                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white w-sm-31">
+                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
+                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white w-sm-31">
+                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
+                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                </div>
+            </aside>
+            <!-- quotes list  -->
+            <aside class="quotes">
+                <p class="texts">
+                    <span class="quote_text blue mb-0 d-inline">"Anti-fragility is beyond resilience or robustness,</span>
+                    <span class="quote_text blue mb-0 d-inline">The resilient resists shocks and stays the same;</span>
+                    <span class="quote_text blue mb-0 d-inline">the anti-fragile gets better."</span>
+                </p>
+                <h4 class="quotes_owner blue"></h4>
+            </aside>
+            <!-- secound list container  -->
+            <aside class="cus_card_container sec_card_list d-sm-flex justify-content-sm-between">
+                <!-- cards  -->
+                <div class="cus_card bg-white w-sm-31">
+                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
+                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white w-sm-31">
+                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
+                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white w-sm-31">
+                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
+                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                </div>
+            </aside>
+        </div>
+    </section>
 
     <!-- js file  -->
     <script src="./vendor/bootstrap/bootstrap.bundle.min.js"></script>
