list and extra large screen responsive added

--- a/index.html
+++ b/index.html
@@ -181,46 +181,46 @@
                 </h4>
             </aside>
             <!-- first list container  -->
-            <aside class="cus_card_container first_card_list mt-3 d-sm-flex justify-content-sm-between">
+            <aside class="cus_card_container first_card_list mt-3 mt-sm-4 mt-md-5 mt-lg-0">
                 <!-- cards  -->
-                <div class="cus_card bg-white w-sm-31">
+                <div class="cus_card bg-white">
                     <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
                     <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
                 </div>
                 <!-- cards  -->
-                <div class="cus_card bg-white w-sm-31">
+                <div class="cus_card bg-white">
                     <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
                     <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
                 </div>
                 <!-- cards  -->
-                <div class="cus_card bg-white w-sm-31">
+                <div class="cus_card bg-white">
                     <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
                     <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
                 </div>
             </aside>
             <!-- quotes list  -->
             <aside class="quotes">
-                <p class="texts">
-                    <span class="quote_text blue mb-0 d-inline">"Anti-fragility is beyond resilience or robustness,</span>
-                    <span class="quote_text blue mb-0 d-inline">The resilient resists shocks and stays the same;</span>
-                    <span class="quote_text blue mb-0 d-inline">the anti-fragile gets better."</span>
+                <p class="texts text-start mb-0">
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">"Anti-fragility is beyond resilience or robustness,</span>
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">The resilient resists shocks and stays the same;</span>
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">the anti-fragile gets better."</span>
                 </p>
-                <h4 class="quotes_owner blue"></h4>
+                <h4 class="quotes_owner blue text-uppercase text-start semiBold">nassim nicholas taleb</h4>
             </aside>
             <!-- secound list container  -->
-            <aside class="cus_card_container sec_card_list d-sm-flex justify-content-sm-between">
+            <aside class="cus_card_container sec_card_list mt-3 mt-lg-0">
                 <!-- cards  -->
-                <div class="cus_card bg-white w-sm-31">
+                <div class="cus_card bg-white">
                     <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
                     <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
                 </div>
                 <!-- cards  -->
-                <div class="cus_card bg-white w-sm-31">
+                <div class="cus_card bg-white">
                     <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
                     <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
                 </div>
                 <!-- cards  -->
-                <div class="cus_card bg-white w-sm-31">
+                <div class="cus_card bg-white">
                     <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
                     <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
                 </div>
