--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="container py-5">
             <!-- main heading  -->
             <aside class="main_heading">
-                <h6 class="smb s_head_ti">for smb's since 1998</h6>
+                <h6 class="smb big_s_head_ti">for smb's since 1998</h6>
                 <h2 class="section_heading mb-0 bold text-dark text-capitalize text-left s_h_l">minimize attacks</h2>
                 <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
                     <span>Increase resiliency,</span>
@@ -184,18 +184,18 @@
             <aside class="cus_card_container first_card_list mt-3 mt-sm-4 mt-md-5 mt-lg-0">
                 <!-- cards  -->
                 <div class="cus_card bg-white">
-                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
-                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                     <h5 class="text-capitalize blue semiBold mb-0">fast incident response</h5>
+                    <p class="para regular mb-0"><span class="d-inline d-sm-block">We'll immediately jump in and help you recover </span><span class="d-inline d-sm-block">and remediate any security problem</span></p>
                 </div>
                 <!-- cards  -->
                 <div class="cus_card bg-white">
-                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
-                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                    <h5 class="text-capitalize blue semiBold mb-0">automated vulnerablity scans</h5>
+                    <p class="para regular mb-0"><span class="d-inline d-sm-block">We are looking for vulnerablities on your Network,</span><span class="d-inline d-sm-block">27/7, so we catch them before they can be compromised</span></p>
                 </div>
                 <!-- cards  -->
                 <div class="cus_card bg-white">
-                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
-                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                    <h5 class="text-capitalize blue semiBold mb-0">assessment documentation</h5>
+                    <p class="para regular mb-0"><span class="d-inline d-sm-block">1 on 1, plain English, regular reports on your security risks,</span><span class="d-inline d-sm-block">so you can mitigate them over time.</span></p>
                 </div>
             </aside>
             <!-- quotes list  -->
@@ -216,13 +216,13 @@
                 </div>
                 <!-- cards  -->
                 <div class="cus_card bg-white">
-                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
-                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                    <h5 class="text-capitalize blue semiBold mb-0">employee security awarness</h5>
+                    <p class="para regular mb-0">Train your employees on how to recognize threats.</p>
                 </div>
                 <!-- cards  -->
                 <div class="cus_card bg-white">
-                    <h5 class="text-capitalize blue semiBold mb-0">anti ransomware</h5>
-                    <p class="para regular mb-0">Multi layered protection against next-gen threats</p>
+                    <h5 class="text-capitalize blue semiBold mb-0">security audits</h5>
+                    <p class="para regular mb-0">1 on 1 consultations on your cybersecurity framework.</p>
                 </div>
             </aside>
         </div>
