minimize downtime section complete without background

--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
             </div>
         </main>
     </div>
-    <!-- mini attacks  -->
+    <!---------------------- --------------mini attacks ----------------------------- -->
     <section id="miniAttacks">
-        <div class="container py-5">
+        <div class="container card_container py-4 py-sm-5">
             <!-- main heading  -->
             <aside class="main_heading">
-                <h6 class="smb big_s_head_ti">for smb's since 1998</h6>
+                <h6 class="smb big_s_head_ti">reduce compromises</h6>
                 <h2 class="section_heading mb-0 bold text-dark text-capitalize text-left s_h_l">minimize attacks</h2>
                 <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
                     <span>Increase resiliency,</span>
@@ -223,6 +223,79 @@
                 <div class="cus_card bg-white">
                     <h5 class="text-capitalize blue semiBold mb-0">security audits</h5>
                     <p class="para regular mb-0">1 on 1 consultations on your cybersecurity framework.</p>
+                </div>
+            </aside>
+        </div>
+    </section>
+    <!---------------------------------------- minimize downtime------------------------------  -->
+    <section id="minimizeDowntime">
+        <div class="container card_container py-4 py-sm-5">
+            <!-- main heading  -->
+            <aside class="main_heading text-end">
+                <h6 class="smb big_s_head_ti text-end">minimize downtime</h6>
+                <h2 class="section_heading mb-0 bold text-dark text-capitalize text-end s_h_l">it's not just time and money.</h2>
+                <h2 class="section_heading mb-0 bold text-dark text-capitalize text-end s_h_l mt-0">you lose brand reputation.</h2>
+                <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
+                    <span>When servers go down,</span>
+                    <span>people can't work.</span>
+                </h4>
+            </aside>
+            <!-- first list container  -->
+            <aside class="cus_card_container first_card_list mt-3 mt-sm-4 mt-md-5 mt-lg-0">
+                <!-- cards  -->
+                <div class="cus_card bg-white">
+                     <h5 class="text-capitalize blue semiBold mb-0">always on systems</h5>
+                    <p class="para regular mb-0">
+                        <span class="d-inline d-sm-block">Reduce single points of failure via high availability </span>
+                        <span class="d-inline d-sm-block">redundant firewalls, backups and fail over systems.</span>
+                    </p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white">
+                    <h5 class="text-capitalize blue semiBold mb-0">Proactively Prevent Downtime</h5>
+                    <p class="para regular mb-0">
+                        <span class="d-inline d-sm-block">Multi layered, stacked software continuously</span>
+                        <span class="d-inline d-sm-block">optimizing for increased uptime.</span>
+                    </p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white">
+                    <h5 class="text-capitalize blue semiBold mb-0">Bounce Back Protocols</h5>
+                    <p class="para regular mb-0">
+                        <span class="d-inline d-sm-block">How long can you go before it is unacceptable </span>
+                        <span class="d-inline d-sm-block">to your business? Leverage our proven methodologies.</span></p>
+                </div>
+            </aside>
+            <!-- quotes list  -->
+            <aside class="quotes">
+                <p class="texts text-start mb-0">
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">Downtime always translates</span>
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">into lost dollars.</span>
+                </p>
+                <h4 class="quotes_owner blue text-uppercase text-start semiBold">ceo</h4>
+            </aside>
+            <!-- secound list container  -->
+            <aside class="cus_card_container sec_card_list mt-3 mt-lg-0">
+                <!-- cards  -->
+                <div class="cus_card bg-white">
+                    <h5 class="text-capitalize blue semiBold mb-0">Speedy, Friendly Helpdesk</h5>
+                    <p class="para regular mb-0">
+                        <span class="d-inline d-sm-block">Average responsive times within 15 minutes.</span>
+                        <span class="d-inline d-sm-block">Deal with the small, before it becomes big.</span>
+                    </p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white">
+                    <h5 class="text-capitalize blue semiBold mb-0">Customized Brand Reputation Solutions</h5>
+                    <p class="para regular mb-0">
+                        <span class="d-inline d-sm-block">Each brand is different. Create a tailored IT package</span>
+                        <span class="d-inline d-sm-block">that addresses your company's specific needs.</span>
+                    </p>
+                </div>
+                <!-- cards  -->
+                <div class="cus_card bg-white">
+                    <h5 class="text-capitalize blue semiBold mb-0">Avoid Reputational Collapse</h5>
+                    <p class="para regular mb-0">Nothing is worse than having to fix mistakes in public.</p>
                 </div>
             </aside>
         </div>
