want-us-to-show section initialized

--- a/index.html
+++ b/index.html
@@ -300,7 +300,32 @@
             </aside>
         </div>
     </section>
+    <!-- ----------------------------------------- want us to show you ----------------------------->
+    <section id="wantUsToShow">
+        <div class="container btn_description_container py-5">
+            <!-- main heading  -->
+            <aside class="main_heading">
+                <h6 class="text-uppercase medium small_section_heading">apply for a <span class="center-bg text-normal"> 1-on-1, FREE 60 MIN </span>consultation</h6>
+                <h2 class="section_heading mb-0 bold text-dark text-capitalize s_h_l">Want us to Show You</h2>
+                <h2 class="section_heading mb-0 bold text-dark text-capitalize s_h_l">How Ensure a Robust</h2>
+                <h2 class="section_heading mb-0 bold text-dark text-capitalize s_h_l">Recovery Plan?</h2>
+            </aside>
+            <!-- texts and buttons  -->
+            <aside class="text__buttons">
+                <!-- sample image  -->
+                <div class="img_container">
+                    <img src="" alt="">
+                </div>
+                <!-- left texts  -->
+                <div class="texts">
+                    <h6 class="button_description medium btn_txt_medium mb-0">Pick our braings for a full <span class="bold">60 Minute Session</span></h6>
+                </div>
+                <!-- button  -->
+                <a href="" class="cus__btn text-center text-capitalize ">free strategy session</a>
+            </aside>
 
+        </div>
+    </section>
     <!-- js file  -->
     <script src="./vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
