--- a/index.html
+++ b/index.html
@@ -350,6 +350,8 @@
                     </div>
                 </aside>
             </div>
+        </div>
+    </section>
     <!-- ---------------------------------------- more then maintence ----------------------------->
     <section id="moreThenMaintence">
         <div class="container">
@@ -446,6 +448,7 @@
             </section>
         </div>
     </section>
+    
     <!-- js file  -->
     <script src="./vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
