more then maintenance

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <h4 class="quotes_owner blue text-uppercase text-start semiBold">brian rogers loop</h4>
             </aside>
             <!-- cards  -->
-            <section class="visual_card_list shaveCard mt-4">
+            <section class="visual_card_list shaveCard mt-4 bg-white">
                 <!-- shave of tittle section  -->
                 <aside class="shaveOffSection visual_card">
                     <h3 class="tittle">
@@ -404,9 +404,9 @@
                     <!-- image  -->
                     <div class="icon_wrap"><img src="./img/icon/premium/phone-call.png" alt="phone call icon"></div>
                     <!-- tittle  -->
-                    <h1 class="text-white tittle text-capitalize">rapid response</h1>
+                    <h1 class="text-dark tittle text-capitalize">rapid response</h1>
                     <!-- texts  -->
-                    <p class="para">
+                    <p class="para text-dark">
                         <span>The faster we solve your</span>
                         <span>problem , the more</span>
                         <span>money we can save</span>
