want-us-to-show section complete

--- a/index.html
+++ b/index.html
@@ -323,13 +323,13 @@
                         <!-- left texts  -->
                         <div class="text_btn_wrap">
                             <!-- texts  -->
-                            <div class="texts mb-lg-0 order-lg-2">
+                            <div class="texts mb-lg-0 order-sm-2">
                                 <h6 class="button_description medium blue btn_txt_medium mb-0">Pick our braings for a full 
                                     <a href="" class="bold blue text-decoration-none d-sm-block">60 Minute Session -></a>
                                 </h6>
                             </div>
                             <!-- button  -->
-                            <a href="" class="strategy_btn text-center text-capitalize me-lg-3">free strategy session</a>
+                            <a href="" class="strategy_btn text-center text-capitalize me-3 me-xxl-4">free strategy session</a>
                         </div>
                     </aside>
                 </div>
@@ -353,8 +353,8 @@
         </div>
     </section>
     <!-- ---------------------------------------- more then maintence ----------------------------->
-    <section id="moreThenMaintence">
-        <div class="container">
+    <section id="moreThenMaintence" class="py-5">
+        <div class="container py-3 py-xl-4 py-xxl-5">
             <!-- main heading  -->
             <aside class="main_heading">
                 <h6 class="smb big_s_head_ti">more then maintenance</h6>
@@ -383,7 +383,7 @@
                         <span>unnecessary IT spend.</span>
                     </h3>
                     <!-- button  -->
-                    <a href="" class="cus__btn text-normal text-decoration-none mt-2 d-none d-lg-inline-block">Free Strategy Session</a>
+                    <a href="" class="cus__btn text-normal text-decoration-none mt-2 mt-xl-3 d-none d-lg-inline-block">Free Strategy Session</a>
                 </aside>
                 <!-- visual cards  -->
                 <aside class="visual_card bg-blue trash">
