--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
     </section>
     <!-- ---------------------------------------- more then maintence ----------------------------->
     <section id="moreThenMaintence" class="py-5">
-        <div class="container py-3 py-xl-4 py-xxl-5">
+        <div class="container quote_heading_cardList_container py-3 py-xl-4 py-xxl-5">
             <!-- main heading  -->
             <aside class="main_heading">
                 <h6 class="smb big_s_head_ti">more then maintenance</h6>
-                <h2 class="section_heading mb-0 bold text-dark text-capitalize text-left s_h_l">Quality IT is NOT just</h2>
+                <h2 class="section_heading mt-lg-2 mt-xl-3 mb-0 bold text-dark text-capitalize text-left s_h_l">Quality IT is NOT just</h2>
                 <h2 class="section_heading bold text-dark text-capitalize text-left s_h_l ">about "keeping the lights on"</h2>
                 <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
                     <span>A competent technology</span>
@@ -366,7 +366,7 @@
                 </h4>
             </aside>
             <!-- quotes  -->
-            <aside class="quotes d-none">
+            <aside class="quotes d-none d-lg-grid">
                 <p class="texts text-start mb-0">
                     <span class="quote_text blue mb-0 d-inline d-sm-block regular">"Do today what others won’t, so tomorrow, </span>
                     <span class="quote_text blue mb-0 d-inline d-sm-block regular">you can do what others can’t."</span>
@@ -503,6 +503,8 @@
             </div>
         </div>
     </section>
+    <!-- ---------------------------------------- fix it before it breaks ------------------------------->
+
     <!-- js file  -->
     <script src="./vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
