--- a/index.html
+++ b/index.html
@@ -504,7 +504,96 @@
         </div>
     </section>
     <!-- ---------------------------------------- fix it before it breaks ------------------------------->
-
+    <section id="fixItBeforeItBreaks" class="py-5">
+        <div class="container quote_heading_cardList_container py-3 py-xl-4 py-xxl-5">
+            <!-- main heading  -->
+            <aside class="main_heading">
+                <h6 class="smb big_s_head_ti">fix it before it breaks</h6>
+                <h2 class="section_heading mt-lg-2 mt-xl-3 mb-0 bold text-dark text-capitalize text-left s_h_l">All system reach critical point</h2>
+                <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
+                    <span>It's all a matter of when.</span>
+                </h4>
+            </aside>
+            <!-- quotes  -->
+            <aside class="quotes d-none d-lg-grid">
+                <p class="texts text-start mb-0">
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">"You don't need to fire your security guard, </span>
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">just because you haven't been</span>
+                    <span class="quote_text blue mb-0 d-inline d-sm-block regular">robbed in over a year."</span>
+                </p>
+                <h4 class="quotes_owner blue text-uppercase text-start semiBold">ceo</h4>
+            </aside>
+            <!-- cards  -->
+            <section class="visual_card_list shaveCard mt-4 bg-white">
+                <!-- shave of tittle section  -->
+                <aside class="shaveOffSection visual_card">
+                    <h3 class="tittle">
+                        <span>Identify</span>
+                        <span>opportunities</span>
+                        <span>for automation.</span>
+                    </h3>
+                    <!-- button  -->
+                    <a href="" class="cus__btn text-normal text-decoration-none mt-2 mt-xl-3 d-none d-lg-inline-block">Free Strategy Session</a>
+                </aside>
+                <!-- visual cards  -->
+                <aside class="visual_card bg-blue workload">
+                    <!-- image  -->
+                    <div class="icon_wrap tittle"><img src="./img/icon/all-system/system.png" alt="system icon"></div>
+                    <!-- tittle  -->
+                    <h1 class="text-white tittle text-capitalize">Integrating Systems to Reduce Workload</h1>
+                    <!-- texts  -->
+                    <p class="para">
+                        <span>Streamline workflows, integrate separate </span>
+                        <span>systems, automate time-consuming tasks, </span>
+                        <span>identify areas of</span>
+                        <span>and much more.</span>
+                    </p>
+                </aside>
+                <!-- visual cards  -->
+                <aside class="visual_card openSource bg-yellow">
+                    <!-- image  -->
+                    <div class="icon_wrap"><img src="./img/icon/all-system/import-export.png" alt="phone call icon"></div>
+                    <!-- tittle  -->
+                    <h1 class="text-dark tittle text-capitalize">Leveraging Open-Source Software</h1>
+                    <!-- texts  -->
+                    <p class="para text-dark">
+                        <span>Open Source solutions helps lowering IT </span>
+                        <span>costs. As opposed to being forced into a </span>
+                        <span>high ticket full suite of products from a </span>
+                        <span>single software company. </span>
+                    </p>
+                </aside>
+                <!-- visual cards  -->
+                <aside class="visual_card cloud bg-lateWhite">
+                    <!-- image  -->
+                    <div class="icon_wrap"><img src="./img/icon/all-system/cloud.png" alt="cloud icon"></div>
+                    <!-- tittle  -->
+                    <h1 class="tittle text-capitalize text-dark">Always Ready for Change</h1>
+                    <!-- texts  -->
+                    <p class="para text-dark">
+                        <span>Technology is rapidly shifting. We help you </span>
+                        <span>stay ahead of the curve by ensuring </span>
+                        <span>efficient, long lasting IT transitions.</span>
+                    </p>
+                </aside>
+                <!-- visual cards  -->
+                <aside class="visual_card awarness bg-lateWhite">
+                    <!-- image  -->
+                    <div class="icon_wrap"><img src="./img/icon/all-system/video.png" alt="awarness icon"></div>
+                    <!-- tittle  -->
+                    <h1 class="tittle text-capitalize text-dark">Consolidating Hardware Assets</h1>
+                    <!-- texts  -->
+                    <p class="para text-dark">
+                        <span>Unnecessary spending can often be further</span>
+                        <span>reduced by reviewing contracts and</span>
+                        <span>renegotiating or consolidating services that</span>
+                        <span>are underused or overpriced.</span>
+                    </p>
+                </aside>
+                
+            </section>
+        </div>
+    </section>
     <!-- js file  -->
     <script src="./vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
