fix-it-before section complete

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 <h4 class="quotes_owner blue text-uppercase text-start semiBold">ceo</h4>
             </aside>
             <!-- cards  -->
-            <section class="visual_card_list shaveCard mt-4 bg-white">
+            <section class="visual_card_list shaveCard mt-4">
                 <!-- shave of tittle section  -->
                 <aside class="shaveOffSection visual_card">
                     <h3 class="tittle">
@@ -545,12 +545,11 @@
                     <p class="para">
                         <span>Streamline workflows, integrate separate </span>
                         <span>systems, automate time-consuming tasks, </span>
-                        <span>identify areas of</span>
                         <span>and much more.</span>
                     </p>
                 </aside>
                 <!-- visual cards  -->
-                <aside class="visual_card openSource bg-yellow">
+                <aside class="visual_card openSource bg-lateWhite">
                     <!-- image  -->
                     <div class="icon_wrap"><img src="./img/icon/all-system/import-export.png" alt="phone call icon"></div>
                     <!-- tittle  -->
@@ -561,6 +560,20 @@
                         <span>costs. As opposed to being forced into a </span>
                         <span>high ticket full suite of products from a </span>
                         <span>single software company. </span>
+                    </p>
+                </aside>
+                <!-- visual cards  -->
+                <aside class="visual_card awarness bg-yellow">
+                    <!-- image  -->
+                    <div class="icon_wrap"><img src="./img/icon/all-system/video.png" alt="awarness icon"></div>
+                    <!-- tittle  -->
+                    <h1 class="tittle text-capitalize text-dark">Consolidating Hardware Assets</h1>
+                    <!-- texts  -->
+                    <p class="para text-dark">
+                        <span>Unnecessary spending can often be further</span>
+                        <span>reduced by reviewing contracts and</span>
+                        <span>renegotiating or consolidating services that</span>
+                        <span>are underused or overpriced.</span>
                     </p>
                 </aside>
                 <!-- visual cards  -->
@@ -576,21 +589,6 @@
                         <span>efficient, long lasting IT transitions.</span>
                     </p>
                 </aside>
-                <!-- visual cards  -->
-                <aside class="visual_card awarness bg-lateWhite">
-                    <!-- image  -->
-                    <div class="icon_wrap"><img src="./img/icon/all-system/video.png" alt="awarness icon"></div>
-                    <!-- tittle  -->
-                    <h1 class="tittle text-capitalize text-dark">Consolidating Hardware Assets</h1>
-                    <!-- texts  -->
-                    <p class="para text-dark">
-                        <span>Unnecessary spending can often be further</span>
-                        <span>reduced by reviewing contracts and</span>
-                        <span>renegotiating or consolidating services that</span>
-                        <span>are underused or overpriced.</span>
-                    </p>
-                </aside>
-                
             </section>
         </div>
     </section>
