--- a/index.html
+++ b/index.html
@@ -782,13 +782,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">How much does it cost per endpoint?</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqList">
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
@@ -799,13 +799,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">What is the term of the contract?</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqList">
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
@@ -816,13 +816,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingFour">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">Will you take the time to understand our unique needs?</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqList">
+                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
@@ -833,13 +833,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingFive">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">Is it worth the cost?</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqList">
+                        <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
@@ -850,13 +850,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingSix">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">What if we are small and don't need "the cloud"?</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqList">
+                        <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
@@ -867,13 +867,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingSeven">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">What if we don't need that much high tech...</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#faqList">
+                        <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
@@ -884,13 +884,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingEight">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">What if we have an existing IT Department?</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#faqList">
+                        <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
@@ -901,13 +901,13 @@
                     <!-- accordion item  -->
                     <div class="accordion-item main_heading" >
                         <h2 class="accordion-header" id="headingNine">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="true" aria-controls="collapseOne">
                             <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
                                 <span class="semiBold">Can you help us protect our business from ransomware?</span>
                             </h4>
                         </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#faqList">
+                        <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#faqList">
                         <div class="accordion-body">
                            <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
                                 <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
