--- a/index.html
+++ b/index.html
@@ -592,6 +592,108 @@
             </section>
         </div>
     </section>
+    <!-- ---------------------------------------- old way vs new way ------------------------------------------>
+    <section id="oldWayNewWay">
+        <div class="container oldNewContainer">
+            <!-- main heading  -->
+            <aside class="main_heading">
+                <h2 class="section_heading mb-0 bold text-dark text-capitalize text-left s_h_l">old way<span> Vs </span>new way</h2>
+                <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
+                    <span>The more you are "out of the loop",</span>
+                    <span>the more we enoy sharing our expertise.</span>
+                </h4>
+            </aside>
+            <!-- all list wrapper -->
+            <aside class="allListWrapper">
+                <!-- left list  -->
+                <div class="left_list item_list">
+                    <h3 class="text-capitalize list_tittle">Reactive mode</h3>
+                    <ul class="list">
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/cross.png" alt="cross icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Service items are missed.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/cross.png" alt="cross icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">No RIO from tech.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/cross.png" alt="cross icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Where does IT spend go?</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/cross.png" alt="cross icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Constant reoccurring issues.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/cross.png" alt="cross icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Expiring or dated systems.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/cross.png" alt="cross icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Putting out fires reactively.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/cross.png" alt="cross icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Unstable IT Architecture</h6>
+                        </li>
+                    </ul>
+                </div>
+                <!-- center list  -->
+                <div class="center_list">
+                    <img src="./img/icon/list icon/arrow.png" alt="arrow icon">
+                </div>
+                <!-- right list  -->
+                <div class="right_list item_list">
+                    <h3 class="text-capitalize list_tittle"><img src="./img/brand.svg" alt="brnd logo"> mode</h3>
+                    <ul class="list">
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/check.png" alt="check icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">A veteran team of professionals.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/check.png" alt="check icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Quarterly Business Reviews.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/check.png" alt="check icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Proactive problem prevention.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/check.png" alt="check icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Efficient modern systems.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/check.png" alt="check icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Regular testing + recovery.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/check.png" alt="check icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Solid IT foundations, first.</h6>
+                        </li>
+                        <!-- list item  -->
+                        <li>
+                            <span class="iconWrap"><img src="./img/icon/list icon/check.png" alt="check icon"></span>
+                            <h6 class="text-decoration-centerline medium mb-0">Solid IT foundations, first.</h6>
+                        </li>
+                    </ul>
+                </div>
+            </aside>
+        </div>
+    </section>
     <!-- js file  -->
     <script src="./vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
